compiler/parser/src/snapshots/rustpython_parser__parser__tests__parse_pass.snap
---
source: compiler/parser/src/parser.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 4,
            },
        ),
        custom: (),
        node: Pass,
    },
]
