compiler/parser/src/snapshots/rustpython_parser__parser__tests__parse_print_2.snap
---
source: compiler/parser/src/parser.rs
expression: parse_ast
---
[
    Located {
        range: 0..23,
        custom: (),
        node: Expr {
            value: Located {
                range: 0..23,
                custom: (),
                node: Call {
                    func: Located {
                        range: 0..5,
                        custom: (),
                        node: Name {
                            id: "print",
                            ctx: Load,
                        },
                    },
                    args: [
                        Located {
                            range: 6..19,
                            custom: (),
                            node: Constant {
                                value: Str(
                                    "Hello world",
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            range: 21..22,
                            custom: (),
                            node: Constant {
                                value: Int(
                                    2,
                                ),
                                kind: None,
                            },
                        },
                    ],
                    keywords: [],
                },
            },
        },
    },
]
