compiler/parser/src/snapshots/rustpython_parser__parser__tests__parse_print_hello.snap
---
source: compiler/parser/src/parser.rs
expression: parse_ast
---
[
    Located {
        range: 0..20,
        custom: (),
        node: Expr {
            value: Located {
                range: 0..20,
                custom: (),
                node: Call {
                    func: Located {
                        range: 0..5,
                        custom: (),
                        node: Name {
                            id: "print",
                            ctx: Load,
                        },
                    },
                    args: [
                        Located {
                            range: 6..19,
                            custom: (),
                            node: Constant {
                                value: Str(
                                    "Hello world",
                                ),
                                kind: None,
                            },
                        },
                    ],
                    keywords: [],
                },
            },
        },
    },
]
