compiler/parser/src/snapshots/rustpython_parser__parser__tests__slice.snap
---
source: compiler/parser/src/parser.rs
expression: parse_ast
---
Located {
    range: 0..8,
    custom: (),
    node: Subscript {
        value: Located {
            range: 0..1,
            custom: (),
            node: Name {
                id: "x",
                ctx: Load,
            },
        },
        slice: Located {
            range: 2..7,
            custom: (),
            node: Slice {
                lower: Some(
                    Located {
                        range: 2..3,
                        custom: (),
                        node: Constant {
                            value: Int(
                                1,
                            ),
                            kind: None,
                        },
                    },
                ),
                upper: Some(
                    Located {
                        range: 4..5,
                        custom: (),
                        node: Constant {
                            value: Int(
                                2,
                            ),
                            kind: None,
                        },
                    },
                ),
                step: Some(
                    Located {
                        range: 6..7,
                        custom: (),
                        node: Constant {
                            value: Int(
                                3,
                            ),
                            kind: None,
                        },
                    },
                ),
            },
        },
        ctx: Load,
    },
}
