compiler/parser/src/snapshots/rustpython_parser__parser__tests__try.snap
---
source: compiler/parser/src/parser.rs
expression: parse_ast
---
[
    Located {
        range: 0..134,
        custom: (),
        node: Try {
            body: [
                Located {
                    range: 9..28,
                    custom: (),
                    node: Raise {
                        exc: Some(
                            Located {
                                range: 15..28,
                                custom: (),
                                node: Call {
                                    func: Located {
                                        range: 15..25,
                                        custom: (),
                                        node: Name {
                                            id: "ValueError",
                                            ctx: Load,
                                        },
                                    },
                                    args: [
                                        Located {
                                            range: 26..27,
                                            custom: (),
                                            node: Constant {
                                                value: Int(
                                                    1,
                                                ),
                                                kind: None,
                                            },
                                        },
                                    ],
                                    keywords: [],
                                },
                            },
                        ),
                        cause: None,
                    },
                },
            ],
            handlers: [
                Located {
                    range: 29..82,
                    custom: (),
                    node: ExceptHandler {
                        type_: Some(
                            Located {
                                range: 36..45,
                                custom: (),
                                node: Name {
                                    id: "TypeError",
                                    ctx: Load,
                                },
                            },
                        ),
                        name: Some(
                            "e",
                        ),
                        body: [
                            Located {
                                range: 56..82,
                                custom: (),
                                node: Expr {
                                    value: Located {
                                        range: 56..82,
                                        custom: (),
                                        node: Call {
                                            func: Located {
                                                range: 56..61,
                                                custom: (),
                                                node: Name {
                                                    id: "print",
                                                    ctx: Load,
                                                },
                                            },
                                            args: [
                                                Located {
                                                    range: 62..81,
                                                    custom: (),
                                                    node: JoinedStr {
                                                        values: [
                                                            Located {
                                                                range: 62..81,
                                                                custom: (),
                                                                node: Constant {
                                                                    value: Str(
                                                                        "caught ",
                                                                    ),
                                                                    kind: None,
                                                                },
                                                            },
                                                            Located {
                                                                range: 62..81,
                                                                custom: (),
                                                                node: FormattedValue {
                                                                    value: Located {
                                                                        range: 72..79,
                                                                        custom: (),
                                                                        node: Call {
                                                                            func: Located {
                                                                                range: 72..76,
                                                                                custom: (),
                                                                                node: Name {
                                                                                    id: "type",
                                                                                    ctx: Load,
                                                                                },
                                                                            },
                                                                            args: [
                                                                                Located {
                                                                                    range: 77..78,
                                                                                    custom: (),
                                                                                    node: Name {
                                                                                        id: "e",
                                                                                        ctx: Load,
                                                                                    },
                                                                                },
                                                                            ],
                                                                            keywords: [],
                                                                        },
                                                                    },
                                                                    conversion: 0,
                                                                    format_spec: None,
                                                                },
                                                            },
                                                        ],
                                                    },
                                                },
                                            ],
                                            keywords: [],
                                        },
                                    },
                                },
                            },
                        ],
                    },
                },
                Located {
                    range: 83..134,
                    custom: (),
                    node: ExceptHandler {
                        type_: Some(
                            Located {
                                range: 90..97,
                                custom: (),
                                node: Name {
                                    id: "OSError",
                                    ctx: Load,
                                },
                            },
                        ),
                        name: Some(
                            "e",
                        ),
                        body: [
                            Located {
                                range: 108..134,
                                custom: (),
                                node: Expr {
                                    value: Located {
                                        range: 108..134,
                                        custom: (),
                                        node: Call {
                                            func: Located {
                                                range: 108..113,
                                                custom: (),
                                                node: Name {
                                                    id: "print",
                                                    ctx: Load,
                                                },
                                            },
                                            args: [
                                                Located {
                                                    range: 114..133,
                                                    custom: (),
                                                    node: JoinedStr {
                                                        values: [
                                                            Located {
                                                                range: 114..133,
                                                                custom: (),
                                                                node: Constant {
                                                                    value: Str(
                                                                        "caught ",
                                                                    ),
                                                                    kind: None,
                                                                },
                                                            },
                                                            Located {
                                                                range: 114..133,
                                                                custom: (),
                                                                node: FormattedValue {
                                                                    value: Located {
                                                                        range: 124..131,
                                                                        custom: (),
                                                                        node: Call {
                                                                            func: Located {
                                                                                range: 124..128,
                                                                                custom: (),
                                                                                node: Name {
                                                                                    id: "type",
                                                                                    ctx: Load,
                                                                                },
                                                                            },
                                                                            args: [
                                                                                Located {
                                                                                    range: 129..130,
                                                                                    custom: (),
                                                                                    node: Name {
                                                                                        id: "e",
                                                                                        ctx: Load,
                                                                                    },
                                                                                },
                                                                            ],
                                                                            keywords: [],
                                                                        },
                                                                    },
                                                                    conversion: 0,
                                                                    format_spec: None,
                                                                },
                                                            },
                                                        ],
                                                    },
                                                },
                                            ],
                                            keywords: [],
                                        },
                                    },
                                },
                            },
                        ],
                    },
                },
            ],
            orelse: [],
            finalbody: [],
        },
    },
]
