compiler/parser/src/snapshots/rustpython_parser__parser__tests__variadic_generics.snap
---
source: compiler/parser/src/parser.rs
expression: parse_ast
---
[
    Located {
        range: 1..49,
        custom: (),
        node: FunctionDef {
            name: "args_to_tuple",
            args: Arguments {
                posonlyargs: [],
                args: [],
                vararg: Some(
                    Located {
                        range: 20..29,
                        custom: (),
                        node: ArgData {
                            arg: "args",
                            annotation: Some(
                                Located {
                                    range: 26..29,
                                    custom: (),
                                    node: Starred {
                                        value: Located {
                                            range: 27..29,
                                            custom: (),
                                            node: Name {
                                                id: "Ts",
                                                ctx: Load,
                                            },
                                        },
                                        ctx: Load,
                                    },
                                },
                            ),
                            type_comment: None,
                        },
                    },
                ),
                kwonlyargs: [],
                kw_defaults: [],
                kwarg: None,
                defaults: [],
            },
            body: [
                Located {
                    range: 46..49,
                    custom: (),
                    node: Expr {
                        value: Located {
                            range: 46..49,
                            custom: (),
                            node: Constant {
                                value: Ellipsis,
                                kind: None,
                            },
                        },
                    },
                },
            ],
            decorator_list: [],
            returns: Some(
                Located {
                    range: 34..44,
                    custom: (),
                    node: Subscript {
                        value: Located {
                            range: 34..39,
                            custom: (),
                            node: Name {
                                id: "Tuple",
                                ctx: Load,
                            },
                        },
                        slice: Located {
                            range: 40..43,
                            custom: (),
                            node: Starred {
                                value: Located {
                                    range: 41..43,
                                    custom: (),
                                    node: Name {
                                        id: "Ts",
                                        ctx: Load,
                                    },
                                },
                                ctx: Load,
                            },
                        },
                        ctx: Load,
                    },
                },
            ),
            type_comment: None,
        },
    },
]
